--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "files": [
     "lib"
   ],
-  "main": "lib/index.js",
+  "main": "index.js",
   "keywords": [
     "socket",
     "drawing",
@@ -43,5 +43,9 @@
   "jest": {
     "testEnvironment": "node"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "express": "^4.16.2",
+    "socket.io": "^2.0.4"
+  }
 }
